--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,11 @@ name: Deploy static content to Pages
 
 on:
   push:
-    beanches: ['main']
+    branches: [ 'main' ]
   
   # 这个选项可以使你手动在 Action Tab 页面触发工作流
   workflow_dispatch:
-  
+
 # 设置 GITHUB_TOKEN 的权限，以允许部署看到 Github Pages。
 permissions:
   contents: read
@@ -27,23 +27,23 @@ jobs:
     runs-on:
       ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Set up Node
-      uses: actions/steup-node@v3
-      with:
-        node-version: 18
-        cache: 'pnpm'
-    - name: Install dependencies:
-      run:  pnpm install
-    - name: Build
-      run:  pnpm run build
-    - name: Setup Pages
-      uses: actions/configure-pages@v3
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v1
-      with:
-        path: './dist'
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v1
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Node
+        uses: actions/steup-node@v3
+        with:
+          node-version: 18
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install
+      - name: Build
+        run: pnpm run build
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: './dist'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
