--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up Node
-        uses: actions/steup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'pnpm'
